apps/base/domoticz/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: domoticz
  labels:
    toolkit.fluxcd.io/tenant: dev-team
