apps/base/domoticz/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: domoticz
  name: domoticz
  namespace: domoticz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domoticz
  template:
    metadata:
      labels:
        app: domoticz
    spec:
      hostNetwork: true
      volumes:
        - name: domoticz-storage
          persistentVolumeClaim:
            claimName: domoticz-storage-pvc
        - name: domoticz-local-path-storage
          persistentVolumeClaim:
            claimName: domoticz-local-path-storage
        - name: modbus-storage
          configMap:
            name: modbus-cm
      containers:
        - image: domoticz/domoticz:2023-beta.15082
          name: domoticz
          volumeMounts:
            - mountPath: "/opt/domoticz/userdata"
              name: domoticz-storage
            - mountPath: "/opt/domoconfigseed/"
              name: domoticz-local-path-storage
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
        # - image: gkroone/clockbox:latest
        #   name: semodbus2domoticz
        #   volumeMounts:
        #     - mountPath: /domoticz.ini
        #       subPath: domoticz.ini
        #       name: modbus-storage
        #   resources:
        #     requests:
        #       cpu: "50m"
        #       memory: "32Mi"
        #     limits:
        #       cpu: "75m"
        #       memory: "64Mi"
---


apiVersion: v1
kind: Service
metadata:
  name: domoticz
  namespace: domoticz
spec:
  selector:
    app: domoticz
  ports:
    - protocol: TCP
      port: 8080
      name: http
